<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maxtouch_Tester</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    
    <string name="touch_points">Touch Points</string>
    <string name="accuracy">Accuracy</string>
    <string name="jitter">Jitter</string>
    <string name="separation">Separation</string>
    <string name="flick">Flick</string>
    <string name="noise">Noise</string>
    <string name="water">Water</string>
    <string name="button">Button</string>
</resources>
